# Zaoqi

./: CHANGELOG.md  LICENSE  README.md  Zaoqi.cabal
app/: Goal.hs  Main.hs  Stream.hs  Substitution.hs  Utility.hs  Value.hs
core/: Goal.hs  Stream.hs  Substitution.hs  Utility.hs  Value.hs
test/: CoreTest.hs  Main.hs
