cabal-version:      2.4
name:               Zaoqi
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:
license:            MIT
license-file:       LICENSE
author:             简
maintainer:         2447746158@qq.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable Zaoqi
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:    Utility, Value, Substitution

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0, containers ^>=0.6.5.1
    hs-source-dirs:   app
    default-language: Haskell2010
