cabal-version:      2.4
name:               Zaoqi
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:
license:            MIT
license-file:       LICENSE
author:             简
maintainer:         2447746158@qq.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library zaoqi-core
    exposed-modules:   Utility, Stream, Value, Substitution, Goal
    other-extensions: DeriveFunctor, InstanceSigs
    build-depends:    base ^>=4.14.3.0, containers ^>=0.6.5.1
    hs-source-dirs:   core
    default-language: Haskell2010

executable Zaoqi
    main-is:          Main.hs
    build-depends:    base ^>=4.14.3.0, containers ^>=0.6.5.1, zaoqi-core
    hs-source-dirs:   app
    default-language: Haskell2010

test-suite test
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    hs-source-dirs:   test
    build-depends:    base, HUnit, zaoqi-core
    default-language: Haskell2010
